[gd_scene load_steps=15 format=3 uid="uid://dwlyvqew40syg"]

[ext_resource type="Script" path="res://microjogos/2023S1/projeto-jose-victor/cenas/scripts/main.gd" id="1_nwctk"]
[ext_resource type="PackedScene" uid="uid://dsqlfkk0wh851" path="res://microjogos/2023S1/projeto-jose-victor/cenas/player.tscn" id="2_7ilmr"]
[ext_resource type="Texture2D" uid="uid://cpu3k4x1wftxy" path="res://microjogos/2023S1/projeto-jose-victor/recursos/Snake.png" id="2_tu0jd"]
[ext_resource type="Script" path="res://microjogos/2023S1/projeto-jose-victor/cenas/scripts/Miojin.gd" id="3_3v2m1"]
[ext_resource type="AudioStream" uid="uid://co3xqt6xf76ul" path="res://microjogos/2023S1/projeto-jose-victor/recursos/218064__meaxx__apple-2.wav" id="5_760bc"]
[ext_resource type="AudioStream" uid="uid://b36begoryac2l" path="res://principal/recursos/sounds/SFX/Win.wav" id="6_pha7n"]
[ext_resource type="AudioStream" uid="uid://bnslh24sb4kd5" path="res://principal/recursos/sounds/SFX/Damage.wav" id="7_0umq8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qtgeu"]
texture = ExtResource("2_tu0jd")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
11:7/size_in_atlas = Vector2i(1, 2)
11:7/0 = 0
12:7/size_in_atlas = Vector2i(1, 2)
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
10:7/size_in_atlas = Vector2i(1, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 11

[sub_resource type="TileSet" id="TileSet_tbvuq"]
sources/0 = SubResource("TileSetAtlasSource_qtgeu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0wfx"]
size = Vector2(64, 1088)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8st21"]
size = Vector2(1792, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5aqon"]
size = Vector2(62.5, 1088)

[sub_resource type="AtlasTexture" id="AtlasTexture_evgqu"]
atlas = ExtResource("2_tu0jd")
region = Rect2(0, 336, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itg8m"]
size = Vector2(64, 64)

[node name="Main" type="Node2D"]
script = ExtResource("1_nwctk")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(128, 128)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_tbvuq")
format = 2
layer_0/y_sort_origin = -2
layer_0/tile_data = PackedInt32Array(327685, 196608, 8, 458760, 0, 8, 393224, 65536, 8, 327689, 65536, 8, 393225, 131072, 8, 458761, 65536, 8, 458759, 65536, 8, 458758, 196608, 8, 393221, 0, 8, 327686, 0, 8, 327687, 196608, 8, 327688, 196608, 8, 393223, 0, 8, 524295, 0, 8, 524294, 196608, 8, 589830, 0, 8, 655365, 65536, 8, 720901, 65536, 8, 786437, 196608, 8, 720902, 196608, 8, 655366, 131072, 8, 655367, 131072, 8, 589832, 65536, 8, 589833, 65536, 8, 524297, 196608, 8, 655369, 196608, 8, 655368, 131072, 8, 589831, 131072, 8, 655364, 196608, 8, 655363, 196608, 8, 655362, 65536, 8, 589826, 0, 8, 589827, 0, 8, 589828, 0, 8, 589829, 131072, 8, 720904, 196608, 8, 720903, 196608, 8, 720900, 65536, 8, 720899, 196608, 8, 720898, 65536, 8, 655361, 131072, 8, 589825, 0, 8, 524290, 196608, 8, 524291, 196608, 8, 524292, 196608, 8, 786438, 0, 8, 458756, 65536, 8, 393220, 131072, 8, 458757, 196608, 8, 524293, 65536, 8, 720897, 65536, 8, 720896, 65536, 8, 851967, 196608, 8, 917503, 131072, 8, 786431, 0, 8, 720895, 65536, 8, 655359, 131072, 8, 589823, 0, 8, 524287, 0, 8, 458751, 196608, 8, 393216, 131072, 8, 327680, 0, 8, 262144, 0, 8, 196608, 65536, 8, 131072, 65536, 8, 65536, 196608, 8, 0, 65536, 8, 65535, 196608, 8, -1, 196608, 8, -65537, 0, 8, 131071, 196608, 8, 196607, 131072, 8, 262143, 65536, 8, 327679, 0, 8, 393215, 65536, 8, 589824, 65536, 8, 655360, 0, 8, 851968, 65536, 8, 851969, 196608, 8, 851970, 131072, 8, 851971, 0, 8, 851972, 131072, 8, 851973, 196608, 8, 786439, 196608, 8, 786440, 196608, 8, 786441, 65536, 8, 786442, 65536, 8, 786443, 0, 8, 786444, 131072, 8, 786445, 196608, 8, 786446, 65536, 8, 786447, 65536, 8, 786448, 65536, 8, 786449, 0, 8, 786450, 65536, 8, 786451, 131072, 8, 786452, 131072, 8, 786453, 0, 8, 786454, 131072, 8, 786455, 0, 8, 786456, 196608, 8, 786457, 65536, 8, 720921, 196608, 8, 655385, 0, 8, 589849, 0, 8, 524313, 0, 8, 458777, 196608, 8, 393241, 196608, 8, 327705, 65536, 8, 262169, 196608, 8, 196633, 131072, 8, 131097, 131072, 8, 131096, 0, 8, 196632, 196608, 8, 262168, 65536, 8, 262167, 65536, 8, 327702, 196608, 8, 327701, 131072, 8, 393237, 65536, 8, 393236, 131072, 8, 393235, 0, 8, 458771, 65536, 8, 458770, 196608, 8, 458769, 196608, 8, 458768, 196608, 8, 458767, 196608, 8, 458766, 131072, 8, 458765, 65536, 8, 393229, 196608, 8, 393228, 131072, 8, 327692, 196608, 8, 327691, 196608, 8, 262154, 196608, 8, 262153, 196608, 8, 196617, 196608, 8, 196616, 65536, 8, 196615, 0, 8, 131079, 131072, 8, 131078, 0, 8, 196613, 65536, 8, 262149, 0, 8, 393222, 131072, 8, 524302, 131072, 8, 65540, 131072, 8, 131076, 65536, 8, 196612, 0, 8, 262148, 65536, 8, 327684, 131072, 8, 786436, 131072, 8, 65541, 131072, 8, 131077, 131072, 8, 65542, 0, 8, 196614, 196608, 8, 262150, 131072, 8, 65543, 196608, 8, 262151, 0, 8, 65544, 65536, 8, 131080, 65536, 8, 262152, 65536, 8, 524296, 0, 8, 65545, 131072, 8, 131081, 196608, 8, 720905, 0, 8, 65546, 196608, 8, 131082, 131072, 8, 196618, 196608, 8, 327690, 196608, 8, 393226, 131072, 8, 458762, 65536, 8, 524298, 131072, 8, 589834, 196608, 8, 655370, 0, 8, 720906, 0, 8, 65547, 65536, 8, 131083, 65536, 8, 196619, 131072, 8, 262155, 196608, 8, 393227, 65536, 8, 458763, 196608, 8, 524299, 131072, 8, 589835, 196608, 8, 655371, 196608, 8, 720907, 65536, 8, 65548, 65536, 8, 131084, 196608, 8, 196620, 65536, 8, 262156, 65536, 8, 458764, 196608, 8, 524300, 131072, 8, 589836, 131072, 8, 655372, 131072, 8, 720908, 196608, 8, 65549, 0, 8, 131085, 65536, 8, 196621, 0, 8, 262157, 196608, 8, 327693, 0, 8, 524301, 131072, 8, 589837, 0, 8, 655373, 196608, 8, 720909, 65536, 8, 65550, 65536, 8, 131086, 0, 8, 196622, 65536, 8, 262158, 65536, 8, 327694, 196608, 8, 393230, 65536, 8, 589838, 0, 8, 655374, 65536, 8, 720910, 65536, 8, 65551, 0, 8, 131087, 131072, 8, 196623, 131072, 8, 262159, 131072, 8, 327695, 0, 8, 393231, 0, 8, 524303, 196608, 8, 589839, 0, 8, 655375, 196608, 8, 720911, 196608, 8, 65552, 0, 8, 131088, 65536, 8, 196624, 196608, 8, 262160, 131072, 8, 327696, 131072, 8, 393232, 65536, 8, 524304, 0, 8, 589840, 0, 8, 655376, 0, 8, 720912, 196608, 8, 65553, 196608, 8, 131089, 65536, 8, 196625, 0, 8, 262161, 196608, 8, 327697, 131072, 8, 393233, 65536, 8, 524305, 0, 8, 589841, 65536, 8, 655377, 196608, 8, 720913, 0, 8, 65554, 0, 8, 131090, 65536, 8, 196626, 131072, 8, 262162, 0, 8, 327698, 196608, 8, 393234, 131072, 8, 524306, 131072, 8, 589842, 65536, 8, 655378, 131072, 8, 720914, 196608, 8, 65555, 196608, 8, 131091, 131072, 8, 196627, 131072, 8, 262163, 65536, 8, 327699, 131072, 8, 524307, 0, 8, 589843, 196608, 8, 655379, 196608, 8, 720915, 0, 8, 65556, 131072, 8, 131092, 65536, 8, 196628, 65536, 8, 262164, 0, 8, 327700, 65536, 8, 458772, 196608, 8, 524308, 131072, 8, 589844, 196608, 8, 655380, 131072, 8, 720916, 196608, 8, 65557, 65536, 8, 131093, 196608, 8, 196629, 0, 8, 262165, 65536, 8, 458773, 131072, 8, 524309, 0, 8, 589845, 0, 8, 655381, 131072, 8, 720917, 65536, 8, 65558, 0, 8, 131094, 65536, 8, 196630, 196608, 8, 262166, 0, 8, 393238, 65536, 8, 458774, 65536, 8, 524310, 0, 8, 589846, 196608, 8, 655382, 196608, 8, 720918, 0, 8, 65559, 65536, 8, 131095, 196608, 8, 196631, 0, 8, 327703, 131072, 8, 393239, 0, 8, 458775, 0, 8, 524311, 65536, 8, 589847, 196608, 8, 655383, 65536, 8, 720919, 196608, 8, 65560, 131072, 8, 327704, 65536, 8, 393240, 0, 8, 458776, 131072, 8, 524312, 65536, 8, 589848, 0, 8, 655384, 65536, 8, 720920, 196608, 8, 65561, 65536, 8, 65562, 196608, 8, 131098, 65536, 8, 196634, 65536, 8, 262170, 65536, 8, 327706, 0, 8, 393242, 131072, 8, 458778, 65536, 8, 524314, 131072, 8, 589850, 196608, 8, 655386, 65536, 8, 720922, 131072, 8, 786458, 0, 8, -131072, 196608, 8, -65536, 131072, 8, 458752, 0, 8, 524288, 131072, 8, -131071, 131072, 8, -65535, 131072, 8, 1, 65536, 8, 65537, 65536, 8, 131073, 0, 8, 196609, 0, 8, 262145, 65536, 8, 327681, 0, 8, 393217, 65536, 8, 458753, 65536, 8, 524289, 196608, 8, 786433, 65536, 8, -131070, 0, 8, -65534, 65536, 8, 2, 0, 8, 65538, 131072, 8, 131074, 0, 8, 196610, 131072, 8, 262146, 65536, 8, 327682, 196608, 8, 393218, 0, 8, 458754, 131072, 8, 786434, 131072, 8, -131069, 65536, 8, -65533, 0, 8, 3, 65536, 8, 65539, 131072, 8, 131075, 196608, 8, 196611, 196608, 8, 262147, 131072, 8, 327683, 196608, 8, 393219, 196608, 8, 458755, 0, 8, 786435, 196608, 8, -131068, 0, 8, -65532, 0, 8, 4, 0, 8, -131067, 131072, 8, -65531, 131072, 8, 5, 131072, 8, -131066, 131072, 8, -65530, 65536, 8, 6, 65536, 8, 851974, 65536, 8, -131065, 131072, 8, -65529, 0, 8, 7, 131072, 8, 851975, 131072, 8, -131064, 0, 8, -65528, 0, 8, 8, 0, 8, 851976, 0, 8, -131063, 131072, 8, -65527, 65536, 8, 9, 0, 8, 851977, 196608, 8, -131062, 0, 8, -65526, 0, 8, 10, 131072, 8, 851978, 65536, 8, -131061, 0, 8, -65525, 131072, 8, 11, 131072, 8, 851979, 65536, 8, -131060, 65536, 8, -65524, 131072, 8, 12, 65536, 8, 851980, 0, 8, -131059, 196608, 8, -65523, 0, 8, 13, 0, 8, 851981, 196608, 8, -131058, 65536, 8, -65522, 196608, 8, 14, 196608, 8, 851982, 131072, 8, -131057, 65536, 8, -65521, 196608, 8, 15, 131072, 8, 851983, 196608, 8, -131056, 0, 8, -65520, 131072, 8, 16, 0, 8, 851984, 131072, 8, -131055, 65536, 8, -65519, 65536, 8, 17, 196608, 8, 851985, 65536, 8, -131054, 0, 8, -65518, 65536, 8, 18, 0, 8, 851986, 196608, 8, -131053, 131072, 8, -65517, 131072, 8, 19, 65536, 8, 851987, 65536, 8, -131052, 65536, 8, -65516, 131072, 8, 20, 131072, 8, 851988, 131072, 8, -131051, 196608, 8, -65515, 0, 8, 21, 131072, 8, 851989, 0, 8, -131050, 65536, 8, -65514, 65536, 8, 22, 196608, 8, 851990, 65536, 8, -131049, 196608, 8, -65513, 65536, 8, 23, 65536, 8, 851991, 131072, 8, -131048, 65536, 8, -65512, 65536, 8, 24, 196608, 8, 851992, 196608, 8, -131047, 65536, 8, -65511, 0, 8, 25, 131072, 8, 851993, 196608, 8, -131046, 65536, 8, -65510, 65536, 8, 26, 0, 8, 851994, 131072, 8, -65538, 131072, 8, -2, 0, 8, 65534, 0, 8, 131070, 0, 8, 196606, 65536, 8, 262142, 131072, 8, 327678, 196608, 8, 393214, 0, 8, 458750, 196608, 8, 524286, 65536, 8, 589822, 131072, 8, 655358, 65536, 8, 720894, 131072, 8, 786430, 196608, 8, 851966, 65536, 8, 917502, 0, 8, -131045, 131072, 8, -65509, 0, 8, 27, 65536, 8, 65563, 131072, 8, 131099, 65536, 8, 196635, 131072, 8, 262171, 65536, 8, 327707, 196608, 8, 393243, 131072, 8, 458779, 0, 8, 524315, 196608, 8, 589851, 65536, 8, 655387, 0, 8, 720923, 131072, 8, 786459, 131072, 8, 851995, 131072, 8, 983038, 196608, 8, 983039, 196608, 8, 917504, 196608, 8, 917505, 196608, 8, 917506, 0, 8, 917507, 196608, 8, 917508, 65536, 8, 917509, 131072, 8, 917510, 131072, 8, 917511, 131072, 8, 917512, 0, 8, 917513, 65536, 8, 917514, 196608, 8, 917515, 131072, 8, 917516, 0, 8, 917517, 131072, 8, 917518, 131072, 8, 917519, 0, 8, 917520, 0, 8, 917521, 196608, 8, 917522, 131072, 8, 917523, 196608, 8, 917524, 0, 8, 917525, 0, 8, 917526, 131072, 8, 917527, 196608, 8, 917528, 196608, 8, 917529, 65536, 8, 917530, 131072, 8, 917531, 196608, 8, 786432, 0, 8)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-65538, 851968, 8, -2, 983040, 8, 65534, 851968, 8, 131070, 983040, 8, 196606, 851968, 8, 262142, 851968, 8, 327678, 983040, 8, 393214, 917504, 8, 458750, 983040, 8, 524286, 917504, 8, 589822, 983040, 8, 655358, 983040, 8, 720894, 917504, 8, 786430, 917504, 8, 851966, 851968, 8, 917502, 983040, 8, 983038, 917504, 8, 983039, 917504, 8, 917504, 851968, 8, 917505, 917504, 8, 917506, 983040, 8, 917507, 917504, 8, 917508, 917504, 8, 917509, 983040, 8, 917510, 917504, 8, 917511, 851968, 8, 917512, 851968, 8, 917513, 983040, 8, 917514, 851968, 8, 917515, 851968, 8, 917516, 983040, 8, 917517, 917504, 8, 917518, 851968, 8, 917519, 983040, 8, 917520, 917504, 8, 917521, 917504, 8, 917522, 983040, 8, 917523, 851968, 8, 917524, 851968, 8, 917525, 983040, 8, 917526, 983040, 8, 917527, 917504, 8, 917528, 851968, 8, 917529, 983040, 8, 917530, 851968, 8, 917531, 851968, 8, 851995, 851968, 8, 786459, 983040, 8, 720923, 851968, 8, 655387, 917504, 8, 589851, 851968, 8, 524315, 983040, 8, 458779, 983040, 8, 393243, 851968, 8, 327707, 917504, 8, 262171, 851968, 8, 196635, 983040, 8, 131099, 851968, 8, 65563, 983040, 8, 27, 917504, 8, -65509, 917504, 8, -131045, 851968, 8, -131046, 851968, 8, -131047, 983040, 8, -131048, 851968, 8, -131049, 983040, 8, -131050, 983040, 8, -131051, 851968, 8, -131052, 983040, 8, -131053, 851968, 8, -131054, 917504, 8, -131055, 983040, 8, -131056, 851968, 8, -131057, 851968, 8, -131058, 983040, 8, -131059, 917504, 8, -131060, 983040, 8, -131061, 917504, 8, -131062, 917504, 8, -131063, 917504, 8, -131064, 851968, 8, -131065, 917504, 8, -131066, 983040, 8, -131067, 917504, 8, -131068, 983040, 8, -131069, 917504, 8, -131070, 851968, 8, -131071, 851968, 8, -131072, 983040, 8, -65537, 917504, 8)

[node name="Camera3D" type="Camera2D" parent="."]
anchor_mode = 0
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(32, 544)
shape = SubResource("RectangleShape2D_k0wfx")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(960, 1056)
shape = SubResource("RectangleShape2D_8st21")
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(960, 32)
shape = SubResource("RectangleShape2D_8st21")
debug_color = Color(0, 0.6, 0.701961, 0.419608)
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(1887.25, 544)
shape = SubResource("RectangleShape2D_5aqon")
metadata/_edit_lock_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 544)
shape = SubResource("RectangleShape2D_k0wfx")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(960, 1056)
shape = SubResource("RectangleShape2D_8st21")
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(960, 32)
shape = SubResource("RectangleShape2D_8st21")
debug_color = Color(0, 0.6, 0.701961, 0.419608)
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1887.25, 544)
shape = SubResource("RectangleShape2D_5aqon")
metadata/_edit_lock_ = true

[node name="Miojin1" type="Area2D" parent="."]
position = Vector2(960, 928)
script = ExtResource("3_3v2m1")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Miojin1"]
texture_filter = 1
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_evgqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Miojin1"]
shape = SubResource("RectangleShape2D_itg8m")

[node name="Miojin2" type="Area2D" parent="."]
position = Vector2(1760, 544)
script = ExtResource("3_3v2m1")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Miojin2"]
texture_filter = 1
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_evgqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Miojin2"]
shape = SubResource("RectangleShape2D_itg8m")

[node name="Miojin3" type="Area2D" parent="."]
position = Vector2(960, 160)
script = ExtResource("3_3v2m1")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Miojin3"]
texture_filter = 1
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_evgqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Miojin3"]
shape = SubResource("RectangleShape2D_itg8m")

[node name="player" parent="." instance=ExtResource("2_7ilmr")]
position = Vector2(152, 544)

[node name="mordida" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_760bc")
volume_db = 10.0

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pha7n")

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_0umq8")

[connection signal="body_entered" from="Miojin1" to="." method="ganhar_ponto"]
[connection signal="body_entered" from="Miojin1" to="Miojin1" method="_on_body_entered"]
[connection signal="body_entered" from="Miojin2" to="." method="ganhar_ponto"]
[connection signal="body_entered" from="Miojin2" to="Miojin2" method="_on_body_entered"]
[connection signal="body_entered" from="Miojin3" to="." method="ganhar_ponto"]
[connection signal="body_entered" from="Miojin3" to="Miojin3" method="_on_body_entered"]
